Csharp11AndDotNet7: Update PracticalApps, render suppliers from Northwind db

--- a/Csharp/Csharp11AndDotNet7/PracticalApps/Northwind.Web/Northwind.Web.csproj
+++ b/Csharp/Csharp11AndDotNet7/PracticalApps/Northwind.Web/Northwind.Web.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="../Northwind.Common.DataContext.Sqlite/Northwind.Common.DataContext.Sqlite.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="System.Console" Static="true"/>
   </ItemGroup>
 </Project>
