--- a/Csharp/Csharp11AndDotNet7/PracticalApps/Northwind.BlazorServer/Northwind.BlazorServer.csproj
+++ b/Csharp/Csharp11AndDotNet7/PracticalApps/Northwind.BlazorServer/Northwind.BlazorServer.csproj
@@ -6,4 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="../Northwind.Common.DataContext.Sqlite/Northwind.Common.DataContext.Sqlite.csproj" />
+  </ItemGroup>
 </Project>
