--- a/Csharp/Asp.NetCoreInAction/Routing.MinApi/Routing.MinApi.csproj
+++ b/Csharp/Asp.NetCoreInAction/Routing.MinApi/Routing.MinApi.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>e4f1f247-e18b-47d6-94fb-f19f6349353a</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
