--- a/Csharp/Asp.NetCoreInAction/WebApi/DemoWebApi/DemoWebApi.csproj
+++ b/Csharp/Asp.NetCoreInAction/WebApi/DemoWebApi/DemoWebApi.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.10" />
+    <PackageReference Include="NetEscapades.Extensions.Logging.RollingFile" Version="2.5.0" />
+    <PackageReference Include="Seq.Extensions.Logging" Version="6.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
