--- a/Csharp/WebDevelopmentWithBlazor/MyBlog/BlazorWebAssembly/Client/BlazorWebAssembly.Client.csproj
+++ b/Csharp/WebDevelopmentWithBlazor/MyBlog/BlazorWebAssembly/Client/BlazorWebAssembly.Client.csproj
@@ -9,7 +9,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.17" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="7.0.18" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.17" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
