--- a/Csharp/WebDevelopmentWithBlazor/MyBlog/BlazorWebAssembly/Server/BlazorWebAssembly.Server.csproj
+++ b/Csharp/WebDevelopmentWithBlazor/MyBlog/BlazorWebAssembly/Server/BlazorWebAssembly.Server.csproj
@@ -11,6 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Data.Models\Data.Models.csproj" />
+    <ProjectReference Include="..\..\Data\Data.csproj" />
     <ProjectReference Include="..\Client\BlazorWebAssembly.Client.csproj" />
     <ProjectReference Include="..\Shared\BlazorWebAssembly.Shared.csproj" />
   </ItemGroup>
