WebDevWithBlazor: chap8, auth for BlazorServer

--- a/Csharp/WebDevelopmentWithBlazor/MyBlog/BlazorServer/appsettings.json
+++ b/Csharp/WebDevelopmentWithBlazor/MyBlog/BlazorServer/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Auth0": {
+    "Authority": "dev-rrq3ovc0iji5vczr.us.auth0.com",
+    "ClientId": "uTYVrppXsMjkJ4YlaV2OLlzA7pB5qB2q"
+  }
 }
