--- a/Csharp/WebDevelopmentWithBlazor/MyBlog/Components/Components.csproj
+++ b/Csharp/WebDevelopmentWithBlazor/MyBlog/Components/Components.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Markdig" Version="0.37.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="7.0.18" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.17" />
   </ItemGroup>
 
