WebDevWithBlazor: chap8, authentication and authorization

--- a/Csharp/WebDevelopmentWithBlazor/MyBlog/BlazorWebAssembly/Client/wwwroot/appsettings.json
+++ b/Csharp/WebDevelopmentWithBlazor/MyBlog/BlazorWebAssembly/Client/wwwroot/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "Auth0": {
     "Authority": "https://dev-rrq3ovc0iji5vczr.us.auth0.com",
-    "ClientId": "uTYVrppXsMjkJ4YlaV2OLlzA7pB5qB2q"
+    "ClientId": "uTYVrppXsMjkJ4YlaV2OLlzA7pB5qB2q",
+    "Audience": "https://MyBlogApi"
   }
 }
