--- a/Csharp/WebDevelopmentWithBlazor/MyBlog/Components/Components.csproj
+++ b/Csharp/WebDevelopmentWithBlazor/MyBlog/Components/Components.csproj
@@ -6,6 +6,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="RazorComponents\ItemList.razor.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="RazorComponents\ItemList.razor.js" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <SupportedPlatform Include="browser" />
