BlazerInAction: chap5, add api backend and shared class lib

--- a/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/BlazingTrails.Client.csproj
+++ b/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/BlazingTrails.Client.csproj
@@ -13,6 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="../BlazingTrails.Shared/BlazingTrails.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
 		<Watch Include="**/*.scss" />
 		<None Update="**/*.css" Watch="false" />
 	</ItemGroup>
