BlazorInAction: chap9, add Auth0 authentication

--- a/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Api/appsettings.json
+++ b/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Api/appsettings.json
@@ -8,5 +8,9 @@
   "ConnectionStrings": {
     "BlazingTrailsContext": "DataSource=Persistence/Data/blazingtrails.db"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Auth0": {
+    "Authority": "https://dev-1q888b641g2py2qs.us.auth0.com",
+    "ApiIdentifier": "https://blazingtrailsapi.com"
+  }
 }
