--- a/Csharp/Asp.NetCoreInAction/Advanced/TryHttpClient/ApiClient/ApiClient.csproj
+++ b/Csharp/Asp.NetCoreInAction/Advanced/TryHttpClient/ApiClient/ApiClient.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\SharedLib\SharedLib.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.6" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
