--- a/Csharp/LearnWinUI3/MyMediaCollection/MyMediaCollection.csproj
+++ b/Csharp/LearnWinUI3/MyMediaCollection/MyMediaCollection.csproj
@@ -13,6 +13,7 @@
     <EnableMsixTooling>true</EnableMsixTooling>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Views\ItemDetailsPage.xaml" />
     <None Remove="Views\MainPage.xaml" />
   </ItemGroup>
 
@@ -41,6 +42,11 @@
   -->
   <ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
     <ProjectCapability Include="Msix" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="Views\ItemDetailsPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="Views\MainPage.xaml">
