--- a/Csharp/MiscExercises/TryAspire/Api/Api.csproj
+++ b/Csharp/MiscExercises/TryAspire/Api/Api.csproj
@@ -11,5 +11,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ServiceDefaults\ServiceDefaults.csproj" />
+  </ItemGroup>
+
 
 </Project>
