--- a/Csharp/Avalonia/GetStartedApp/GetStartedApp.csproj
+++ b/Csharp/Avalonia/GetStartedApp/GetStartedApp.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
-    <ApplicationManifest>app.manifest</ApplicationManifest>
+<!--    <ApplicationManifest>app.manifest</ApplicationManifest>-->
     <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
   </PropertyGroup>
 
