--- a/Csharp/Avalonia/GetStartedApp/GetStartedApp.csproj
+++ b/Csharp/Avalonia/GetStartedApp/GetStartedApp.csproj
@@ -16,4 +16,8 @@
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.1.0" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <AvaloniaResource Include="Assets/**" />
+  </ItemGroup>
 </Project>
