--- a/Csharp/Avalonia/GetStartedApp/GetStartedApp.csproj
+++ b/Csharp/Avalonia/GetStartedApp/GetStartedApp.csproj
@@ -16,9 +16,16 @@
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.1.0" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
   </ItemGroup>
   
   <ItemGroup>
     <AvaloniaResource Include="Assets/**" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <None Update="Assets/**/*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
