add(C++): try 2D-array and non-allocating placement

--- a/Cpp/.vscode/settings.json
+++ b/Cpp/.vscode/settings.json
@@ -71,6 +71,14 @@
         "thread": "cpp",
         "typeinfo": "cpp",
         "variant": "cpp",
-        "filesystem": "cpp"
+        "filesystem": "cpp",
+        "*.ipp": "cpp",
+        "strstream": "cpp",
+        "coroutine": "cpp",
+        "source_location": "cpp",
+        "cfenv": "cpp",
+        "cinttypes": "cpp",
+        "typeindex": "cpp",
+        "valarray": "cpp"
     }
 }
