add(C++): try calling virtual functions in constructor

--- a/Cpp/.vscode/settings.json
+++ b/Cpp/.vscode/settings.json
@@ -79,6 +79,7 @@
         "cfenv": "cpp",
         "cinttypes": "cpp",
         "typeindex": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "span": "cpp"
     }
 }
