add(C++): test behavior of implicit/user-def copy ctor in class hierarchy

--- a/Cpp/.vscode/settings.json
+++ b/Cpp/.vscode/settings.json
@@ -80,6 +80,7 @@
         "cinttypes": "cpp",
         "typeindex": "cpp",
         "valarray": "cpp",
-        "span": "cpp"
+        "span": "cpp",
+        "ranges": "cpp"
     }
 }
