add(Make): try non-recursive makefile template from Emile van Bergen

--- a/Tools/Make/RecursiveMakeConsideredHarmful/Makefile
+++ b/Tools/Make/RecursiveMakeConsideredHarmful/Makefile
@@ -1,36 +1,16 @@
-.PHONY: all clean
+### Build flags for all targets
+#
+CF_ALL          = -g -Wall -Iinclude
+LF_ALL          =
+LL_ALL          =
 
-# SRC_FILES =
-TARGETS =
-# OBJECTS =
-ROOT_DIR = .
-BUILD_DIR = ./build
-MODULES = $(ROOT_DIR)/car $(ROOT_DIR)/app
-SUB_DIR_MAKEFILES = $(patsubst %,%/Build.mk,$(MODULES))
-$(info "sub dir makefiles: $(SUB_DIR_MAKEFILES)")
+### Build tools
+#
+CC              = ./build/ccd-gcc.sh
+COMP            = $(CC) $(CF_ALL) $(CF_TGT) -o $@ -c $<
+LINK            = $(CC) $(LF_ALL) $(LF_TGT) -o $@ $^ $(LL_TGT) $(LL_ALL)
+COMPLINK        = $(CC) $(CF_ALL) $(CF_TGT) $(LF_ALL) $(LF_TGT) -o $@ $< $(LL_TGT) $(LL_ALL)
 
-CFLAGS += -Iinclude
-
-# Make sure that build dir exists
-$(shell mkdir -p $(BUILD_DIR))
-
-include $(SUB_DIR_MAKEFILES)
--include $(BUILD_DIR)/**/*.d
-
-all : $(TARGETS)
-
-clean :
-	$(RM) ./*.o ./*.d ./**/*.o ./**/*.d
-	$(RM) -r $(BUILD_DIR)
-
-$(BUILD_DIR)/%.o : %.c %.d
-	-$(shell mkdir -p $(BUILD_DIR)/$(dir $<))
-	$(CC) $(CPPFLAGS) $(CFLAGS) -c $< -o $@
-
-# $(BUILD_DIR)/%.o : %.d
-# 	include($(BUILD_DIR)/$<)
-
-%.d : %.c
-	$(CC) -MM -MP $< -MF $(BUILD_DIR)/$@ $(CFLAGS)
-
-.INTERMEDIATE : %.o %.d
+### Standard parts
+#
+include Rules.mk
