--- a/Tools/CMake/CMakeTutorial/cmake-4.0.2-tutorial-source/Step12/CMakeLists.txt
+++ b/Tools/CMake/CMakeTutorial/cmake-4.0.2-tutorial-source/Step12/CMakeLists.txt
@@ -3,6 +3,8 @@ cmake_minimum_required(VERSION 3.15)
 # set the project name and version
 project(Tutorial VERSION 1.0)
 
+set(CMAKE_DEBUG_POSTFIX d)
+
 add_library(tutorial_compiler_flags INTERFACE)
 target_compile_features(tutorial_compiler_flags INTERFACE cxx_std_11)
 
@@ -38,6 +40,7 @@ add_subdirectory(MathFunctions)
 # add the executable
 add_executable(Tutorial tutorial.cxx)
 target_link_libraries(Tutorial PUBLIC MathFunctions tutorial_compiler_flags)
+set_target_properties(Tutorial PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
 
 # add the binary tree to the search path for include files
 # so that we will find TutorialConfig.h
