--- a/Tools/Docker/OffcialGuide/go-hello/Dockerfile
+++ b/Tools/Docker/OffcialGuide/go-hello/Dockerfile
@@ -1,10 +1,10 @@
 FROM golang:1.24 AS builder
 WORKDIR /src
 COPY main.go ./
-RUN go build -o /bin/hello ./main.go
+RUN go build -o /bin/program ./main.go
 
 
 FROM scratch AS final
 WORKDIR /src
-COPY --from=builder /bin/hello ./
-CMD [ "./hello" ]
+COPY --from=builder /bin/program ./
+CMD [ "./program" ]
