update(TLPI): update demo prj for convenience

--- a/OS/TheLinuxProgrammingInterface/DemoProject/Demo/CMakeLists.txt
+++ b/OS/TheLinuxProgrammingInterface/DemoProject/Demo/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.28)
-project(Demo LANGUAGES C)
+project(program LANGUAGES C)
 
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_STANDARD_REQUIRED ON)
